# pattern-scout-eth

./: .gitignore  ANALISI.md  DEPLOY_GITHUB.md  PAPER_TRADING.md  README.md  VIDEO_RULES.md  avvia.command  bot_settings.json  config.crypto.json  config.example.json  config.optimized.json  config.paper.json  config.stocks.json  deploy_github.sh  pyproject.toml  spegni.command
.github/workflows/: paper-crypto.yml  paper-stocks.yml
data/: README.md  opt_sample_5m.csv  sample_5m.csv
docs/: dashboard.html  equity_curve.csv  index.html  summary.json  trades.csv
examples/: run_sample.sh
freqtrade_user_data/strategies/: PatternScoutFreqtradeStrategy.py
reports/: opt_ranking.json
reports/_v/: annotated_candles.csv  summary.json  trades.csv
reports/_verify/: dashboard.html  trades.csv
reports/crypto_ci/: cumulative.json  dashboard.html  equity_curve.csv  summary.json
reports/crypto_ci_open/: cumulative.json  dashboard.html  summary.json
reports/opt_check/: annotated_candles.csv  summary.json
reports/paper/: annotated_candles.csv  dashboard.html  paper_state.json  summary.json  trades.csv
reports/paper_both/: dashboard.html
reports/sample/: annotated_candles.csv  dashboard.html  equity_curve.csv
scripts/: apply_settings.py
src/pattern_scout/: __init__.py  alpaca.py  backtester.py  cli.py  config.py  crypto.py  dashboard.py  optimize.py  paper.py  strategy.py
tests/: _crypto_sim.py  test_paper.py  test_pattern_scout.py
