[project]
name = "pattern-scout-bot"
version = "0.1.0"
description = "Freqtrade-like research bot for the Pattern Scout opening-range reversal strategy."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.scripts]
pattern-scout = "pattern_scout.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

